Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8234246

[lworld] InterpreterRuntime::is_substitutable fails with guarantee(!HAS_PENDING_EXCEPTION) failed: isSubstitutable() raised exception

XMLWordPrintable

      # Internal Error (/oracle/valhalla2/open/src/hotspot/share/interpreter/interpreterRuntime.cpp:539), pid=31778, tid=31779
      # guarantee(!HAS_PENDING_EXCEPTION) failed: isSubstitutable() raised exception

      Stack: [0x00007fd42a7d3000,0x00007fd42a8d4000], sp=0x00007fd42a8d2760, free space=1021k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0xe49e92] InterpreterRuntime::is_substitutable(JavaThread*, oopDesc*, oopDesc*)+0x342
      j Test.main([Ljava/lang/String;)V+39
      v ~StubRoutines::call_stub
      V [libjvm.so+0xe62e5c] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x73c
      V [libjvm.so+0xf47ea5] jni_invoke_static(JNIEnv_*, JavaValue*, _jobject*, JNICallType, _jmethodID*, JNI_ArgumentPusher*, Thread*) [clone .isra.157] [clone .constprop.244]+0x275
      V [libjvm.so+0xf6935f] jni_CallStaticVoidMethod+0x1ff
      C [libjli.so+0x4d33] JavaMain+0xbd3
      C [libjli.so+0x8239] ThreadJavaMain+0x9

      Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
      j Test.main([Ljava/lang/String;)V+39
      v ~StubRoutines::call_stub
      Register to memory mapping:

            fparain Frederic Parain
            thartmann Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: