8234246: [lworld] InterpreterRuntime::is_substitutable fails with guarantee(!HAS_PENDING_EXCEPTION) failed: isSubstitutable() raised exception

Reviewed-by: mchung